# voteOS

./: .dockerignore  .mcp.json  CLAUDE.md  Cargo.toml  Dockerfile  LAUNCH_PROMPT.md  SESSION_STATE.md
config/: election.example.toml  voteos.toml
config/templates/: voteos.dev.toml  voteos.pilot.toml
docs/: KNOWN_LIMITATIONS.md  QUICKSTART.md
docs/agent/: AGENT_WORKFLOW_SKILL.md  FAILURE_PATTERNS.md  ITERATION_HARNESS.md  PATTERN_REFERENCE.md  SESSION_HARNESS.md  VOTEOS_BUILD_HARNESS.md  WAVE_GATE_CRITERIA.md
docs/conceptual/: 02-layers-and-platform-relationship.md  03-rollout-phases.md
docs/deployment/: PACKAGING_MODEL.md
docs/implementation/: 13-AXIA_CAPABILITY_IMPLEMENTATION_SEQUENCE_V1.md  14-AXIA_EXECUTION_CONTRACTS_V1.md  PERSISTENCE_MODEL.md
docs/intelligence/: OPERATIONAL_INTELLIGENCE.md
docs/pilot/: PILOT_SCENARIO.md
docs/runbooks/: DEPLOYMENT_CHECKLIST.md  VOTEOS_OPERATOR_RUNBOOK.md
docs/runtime/: AXIASYSTEM_INTEGRATION_STATUS.md
docs/testing/: TEST_POLICY.md
docs/voteos-design/: ACTOR_MAP.md  ADOPTION_AND_MIGRATION_STANCE.md  AXIAVOTE_RETIREMENT.md  (+17 more)
scripts/: check_build_status.sh
src/: adoption.rs  api.rs  error.rs  intelligence.rs  lib.rs  main.rs
tests/: test_adoption_layer.rs  test_audit_oversight.rs  test_ballot_operations.rs  test_domain_store.rs  test_election_management.rs  test_end_to_end_lifecycle.rs  test_governance_proposals.rs  test_integration_export.rs  test_intelligence.rs  test_operations.rs  test_result_certification.rs  test_runtime_hardening.rs  test_tally_engine.rs  test_vote_recording.rs  test_voter_registry.rs
(+42 files in other folders)
