[package]
name = "voteos"
version = "0.1.0"
edition = "2021"
description = "VoteOS — Sovereign Decision, Election, and Governance Legitimacy System"
authors = ["Woodrow Love"]
license = "MIT"

[dependencies]
# AxiaSystem Rust Bridge — shared platform capabilities
axia_system_rust_bridge = { path = "../AxiaSystem-Rust-Bridge" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.32", features = ["full"] }

# ICP types
candid = "0.10"
ic-agent = "0.39"

# Utilities
chrono = "0.4"
sha2 = "0.10"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
toml = "0.8"

# API layer
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
